attempting to fix illustration page's ridiculous bottom margin on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -436,6 +436,7 @@ footer p {
     -webkit-column-count: 2;
     column-count: 2;
     padding: 5px;
+    margin-bottom: 5%;
   }
   #business-inquiries {
     margin: auto;
